# tenspr

./: .gitignore  Cargo.toml  README.md
tenspr-backend/: Cargo.toml
tenspr-exploring/: Cargo.toml
tenspr-exploring/src/: lib.rs  mm.rs
tenspr-kerpiler/: Cargo.toml
tenspr-kerpiler/src/: graph_ir.rs  lib.rs  stream_ir.rs
tenspr-kerpiler/src/ker/: mod.rs
tenspr-kerpiler/src/pre/: mod.rs  tensor.rs  typing.rs
tenspr-llvm/: Cargo.toml
tenspr-llvm/src/: lib.rs
tenspr-pinned-arena/: Cargo.toml
tenspr-pinned-arena/src/: lib.rs
