[package]
name = "tenspr-kerpiler"
version = "0.1.0"
edition = "2021"
description = "kernel compiler for sparse tensor computation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_impl = "1.1.0"
hex = "0.4.3"
sha2 = "0.10.7"
smallvec = "1.11.0"
typed-arena-nomut = "0.1.0"                # The arena, a fast but limited type of allocator
rand = "0.8.5"              # Random number generators and other randomness functionality. 
enum-derived = "0.8.2"
