[package]
name = "tenspr-llvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
inkwell = { version = "0.2.0", features = ["llvm14-0"] }
kerpiler = { path = "../tenspr-kerpiler", package = "tenspr-kerpiler"}
typed-arena = "2.0.2"
